2003-04-09  Andreas Kupries  <andreask@activestate.com>

	* pop3.man: Documented new API.

	* pop3.tcl: More logging of internal activity. Final nail into the
	  bug #528928 (Additional border cases were not handled yet,
	  incorrect handling detected through the new testsuite).

	  New API 'pop3::config'.

	* pop3.test: Testsuite rewritten. Uses the sub-process and server
	  support provided by the new module 'devtools'. Avoids the stdin
	  lockup on windows. Uses a micro server for fixed responses to
	  the client instead of a true pop3 server, simplifies the
	  testing, less external dependencies, also better control over
	  the data sent to the client = easier to create intentionally
	  (semi-)bogus information to stress border cases.

2003-04-03  Andreas Kupries  <andreask@activestate.com>

	* pop3.tcl: Fixed bug in the new code which wasn't found because
	  that case was untestable when using a full-blown pop3 demon (Was
	  unable to construct a message which caused the boundary
	  condition to ocur in the client). Found using the microserver
	  code.

	* pop3.test: Removed test case planned to test the above mentioned
	  boundary case. Added code for a microserver based testcase which
	  does exercize the condition. Deactivated as microserver is not
	  yet part of tcllib.

	* pop3.test:
	* srv.tcl: Corrected leftover changes from yesterday which should
	  not have been in the commit. I.e. reactivated reporting and
	  correct cleanup.

2003-04-02  Andreas Kupries  <andreask@activestate.com>

	* srv.tcl:
	* pop3.test: Added tests and messages for bug #528928.

	* pop3.tcl (pop3::open): Bug fix, close channel to server when
	  talking to it fails (no greeting, login failure). This cleans up
	  a leak of open sockets.

	  (pop3::RetrFast): Fixed bug #528928 where a .-stuffed line was
	  misinterpreted as mail terminator.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.man: More semantic markup, less visual one.
