@@ -1,9 +1,9 @@
-[manpage_begin pop3 n 1.5.1]
+[manpage_begin pop3 n 1.6]
 [comment {-*- tcl -*- doctools manpage}]
 [moddesc   {Tcl POP3 Client Library}]
 [titledesc {Tcl client for POP3 email protocol}]
 [require Tcl  8.2]
-[require pop3 [opt 1.5.1]]
+[require pop3 [opt 1.6]]
 [description]
 
 The [package pop3] package provides a simple Tcl-only client library
